Cleaned up html, CSS and added borders to containers

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/702f140c67.js" crossorigin="anonymous"></script>
 </head>
 
-<body id="bkgr-container" class="container-fluid">
+<body id="bkgr-container" class="container-fluid ">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <div class="container-fluid">
@@ -26,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./develop/resume.html">Resume</a>
+                            <a class="nav-link" href="./develop/resume.html">Skillset</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./develop/projects.html">Projects</a>
@@ -41,7 +43,7 @@
         </nav>
 
     </header>
-    <main class="container" id="about-me">
+    <main class="container rounded border border-warning" id="about-me">
         <article class="row">
             <section class="col-sm-4">
 
@@ -60,9 +62,7 @@
                     me to rediscover my passion for computers. I soon after decided to learn full-stack web development
                     to give me the skills neccessary to help me thrive in the expansive world of tech, and I've never
                     looked back.</p>
-                <br>
-                <p>My skillset includes HTML5, CSS, GitHub, JavaScript, Node.js, Bootstrap, jQuery, AJAX, MySQL,
-                    Express, Heroku, API querying, MongoDB and Mongoose </p>
+
 
             </section>
         </article>
