--- a/develop/resume.html
+++ b/develop/resume.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/702f140c67.js" crossorigin="anonymous"></script>
 </head>
 
 <body id="bkgr-container" class="container-fluid">
@@ -25,7 +28,7 @@
                             <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./resume.html">Resume</a>
+                            <a class="nav-link active" aria-current="page" href="./resume.html">Skillset</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./projects.html">Projects</a>
@@ -40,12 +43,57 @@
         </nav>
 
     </header>
-    <main class="">
+    <main class="container rounded border border-warning" id="skills-container">
+        <article class="row">
+            <section class="col-sm-6">
+                <h1><strong>Skills</strong></h1>
+                <ul>
+                    <li>HTMS5</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Node.js</li>
+                    <li>Bootstrap</li>
+                    <li>jQuery</li>
+                    <li>AJAX</li>
+                    <li>MySQL</li>
+                    <li>Express</li>
+                    <li>Heroku</li>
+                    <li>GitHub</li>
+                    <li>RESTful APIs</li>
+                    <li>MongoDB</li>
+                    <li>Mongoose</li>
+                </ul>
+                <h3><strong>Interpersonal skills:</strong></h3>
+                <ul>
+                    <li>Multitasker</li>
+                    <li>Autonomous worker</li>
+                    <li>Team-oriented collaborator</li>
+                    <li>Team-focused learner</li>
+                </ul>
+
+
+
+
+            </section>
+            <section class="col-sm-4" id="skill-icons">
+                <i class="fab fa-html5 fa-5x"></i>
+                <br><br>
+                <i class="fab fa-css3 fa-5x"></i>
+                <br><br>
+                <i class="fab fa-js-square fa-5x"></i>
+                <br><br>
+                <i class="fab fa-node-js fa-5x"></i>
+                <br><br>
+                <i class="fab fa-bootstrap fa-5x"></i>
+            </section>
+        </article>
 
     </main>
 
-    <footer>
-
+    <footer class="container-fluid">
+        <a href="https://github.com/codymjohnson" target="_blank"><i class="fab fa-github fa-5x"
+                id="github-link"></i></a> <a href="https://www.linkedin.com/in/cody-johnson-876554a1/"
+            target="_blank"><i class="fab fa-linkedin-in fa-5x"></i></a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
