--- a/develop/contacts.html
+++ b/develop/contacts.html
@@ -43,15 +43,24 @@
         </nav>
 
     </header>
-    <main class="container text-center">
-        <article class="row">
+    <main class="container rounded border border-warning" id="contacts-container">
+        <article class="row">'
+            <section class="col-sm-12" id="contact-links">
+                <h1><strong>I can be reached by these links:</strong></h1>
+                <hr><br>
+                <a class="btn btn-warning" href="https://github.com/codymjohnson"
+                    role="button"><strong>Github</strong></a>
+                <br><br>
+                <a class="btn btn-warning" href="https://www.linkedin.com/in/cody-johnson-876554a1/"
+                    role="button"><strong>LinkedIn</strong></a>
+            </section>
 
 
         </article>
 
     </main>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid" id="footer-links">
         <a href="https://github.com/codymjohnson" target="_blank"><i class="fab fa-github fa-5x"
                 id="github-link"></i></a> <a href="https://www.linkedin.com/in/cody-johnson-876554a1/"
             target="_blank"><i class="fab fa-linkedin-in fa-5x"></i></a>
