added css sellectors and buttons to links, minor color changes

--- a/develop/contacts.html
+++ b/develop/contacts.html
@@ -46,13 +46,13 @@
     <main class="container rounded border border-warning" id="contacts-container">
         <article class="row">'
             <section class="col-sm-12" id="contact-links">
-                <h1><strong>I can be reached by these links:</strong></h1>
+                <h1><strong>I can be reached at these links:</strong></h1>
                 <hr><br>
-                <a class="btn btn-warning" href="https://github.com/codymjohnson"
-                    role="button"><strong>Github</strong></a>
+                <a class="btn btn-warning btn-lg" href="https://github.com/codymjohnson" role="button" target="_blank"
+                    rel="noopener noreferrer"><strong>Github</strong></a>
                 <br><br>
-                <a class="btn btn-warning" href="https://www.linkedin.com/in/cody-johnson-876554a1/"
-                    role="button"><strong>LinkedIn</strong></a>
+                <a class="btn btn-warning btn-lg" href="https://www.linkedin.com/in/cody-johnson-876554a1/"
+                    role="button" target="_blank" rel="noopener noreferrer"><strong>LinkedIn</strong></a>
             </section>
 
 
