added fixed bkgr image and index container adjustments

--- a/develop/contacts.html
+++ b/develop/contacts.html
@@ -60,7 +60,7 @@
 
     </main>
 
-    <footer class="container-fluid" id="footer-links">
+    <footer class="jumbotron" id="footer-links">
         <a href="https://github.com/codymjohnson" target="_blank"><i class="fab fa-github fa-5x"
                 id="github-link"></i></a> <a href="https://www.linkedin.com/in/cody-johnson-876554a1/"
             target="_blank"><i class="fab fa-linkedin-in fa-5x"></i></a>
