--- a/develop/projects.html
+++ b/develop/projects.html
@@ -46,21 +46,7 @@
     <main class="container rounded border border-warning" id="project-container">
         <article class="row">
             <section class="col-sm-12">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, ipsa ut cum odit sit vero saepe modi,
-                    labore aliquid debitis neque nostrum odio! Dolorum perspiciatis illo maxime repellat voluptate!
-                    Natus, fuga dolor quo tempora molestias veniam obcaecati, ullam amet tenetur rem aliquid vitae nam
-                    recusandae, explicabo consequatur dolore ad porro necessitatibus animi harum. Commodi tempora
-                    suscipit voluptatibus nemo in facere? Facere laboriosam minima rerum consequuntur ipsa aut
-                    consectetur hic saepe, nesciunt dolor aspernatur id accusamus repellat harum architecto accusantium
-                    optio at voluptatem fuga dolores modi perferendis. Tempore, nihil officiis assumenda veniam maxime
-                    beatae, vel eveniet ut aliquam quam excepturi id? Ducimus, natus nesciunt! Ab, nam. Ut ducimus
-                    explicabo nemo suscipit ipsam omnis totam eos minima veritatis officiis, doloremque nisi dolorum
-                    assumenda. Non, eum asperiores officia consectetur vitae nesciunt tenetur voluptate? Consectetur aut
-                    ducimus ullam a asperiores error odio, veniam maiores perspiciatis dolorem perferendis laudantium
-                    assumenda eveniet voluptatem nemo est excepturi id pariatur fugiat eum quam minus! Incidunt tempora
-                    rem iure harum quo nemo sequi, ex sit porro in similique eligendi qui laboriosam numquam odit?
-                    Aliquam blanditiis, excepturi neque numquam repellendus nulla ab. Alias, ratione! Quae repellat
-                    doloremque saepe rem, et officiis qui a, optio accusamus ipsa est minima id neque!</p>
+                <img src="" alt="">
             </section>
         </article>
 
