--- a/develop/contacts.html
+++ b/develop/contacts.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cody J</title>
+    <title>CodyJ | Contacts</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/style.css">
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./resume.html">Skillset</a>
@@ -53,6 +53,10 @@
                 <br><br>
                 <a class="btn btn-warning btn-lg" href="https://www.linkedin.com/in/cody-johnson-876554a1/"
                     role="button" target="_blank" rel="noopener noreferrer"><strong>LinkedIn</strong></a>
+                <br><br>
+                <h2><strong>Or Email:
+                        <hr> cmichael.johnson@outlook.com
+                    </strong></h2>
             </section>
 
 
