--- a/develop/projects.html
+++ b/develop/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cody J</title>
+    <title>CodyJ | Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/style.css">
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./resume.html">Skillset</a>
@@ -43,10 +43,24 @@
         </nav>
 
     </header>
-    <main class="container rounded border border-warning" id="project-container">
+    <main class="container-fluid rounded border border-warning" id="project-container">
         <article class="row">
-            <section class="col-sm-12">
-                <img src="" alt="">
+            <section class="col-sm-4">
+                <img class="img-responsive" style="width: 100%" src="../assets/Screenshot (30)2.png" alt="Beer-quiz">
+                <a class="btn btn-warning btn-lg" href="https://github.com/codymjohnson" role="button" target="_blank"
+                    rel="noopener noreferrer"><strong>Beer Quiz</strong></a>
+            </section>
+            <section class="col-sm-4">
+                <img class="img-responsive" style="width: 100%" src="../assets/Screenshot (32)1.png"
+                    alt="passwd-generator">
+                <a class="btn btn-warning btn-lg" href="https://codymjohnson.github.io/Password-Generator/"
+                    role="button" target="_blank" rel="noopener noreferrer"><strong>Password Generator</strong></a>
+            </section>
+            <section class="col-sm-4">
+                <img class="img-responsive" style="width: 100%" src="../assets/Screenshot (34)1.png"
+                    alt="Daily planner">
+                <a class="btn btn-warning btn-lg" href="https://codymjohnson.github.io/Daily_Planner/" role="button"
+                    target="_blank" rel="noopener noreferrer"><strong>Daily Planner</strong></a>
             </section>
         </article>
 
