--- a/develop/resume.html
+++ b/develop/resume.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cody J</title>
+    <title>CodyJ | Skillset</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/style.css">
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Me</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./resume.html">Skillset</a>
@@ -45,7 +45,7 @@
     </header>
     <main class="container rounded border border-warning" id="skills-container">
         <article class="row">
-            <section class="col-sm-6">
+            <section class="col-sm-4" id="skills">
                 <h1><strong>Skills</strong></h1>
                 <ul>
                     <li>HTMS5</li>
@@ -70,6 +70,15 @@
                     <li>Team-oriented collaborator</li>
                     <li>Team-focused learner</li>
                 </ul>
+            </section>
+            <section class="col-sm-4">
+                <h1><strong>Education</strong></h1>
+                <h2>University of Denver</h2>
+                <p>Certificate of Completion</p>
+                <p>Currently completing the Full Stack Web Development program. Involved in writing, developing, and
+                    pushing up fully functional web applications in GitHub, Heroku, and node.js. Extensively developed
+                    both front-end and back-end environments with HTML5, CSS, </p>
+
             </section>
             <section class="col-sm-4" id="skill-icons">
                 <i class="fab fa-html5 fa-5x"></i>
