--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
         <article class="row">
             <section class="col-sm-4">
 
-                <img src="./assets/professional-smol.jpg" id="me" class="img-fluid" alt="me">
+                <img src="./assets/professional-smol.jpg" id="me" class="img-fluid" style="opacity: 1;" alt="me">
             </section>
             <section class="col-sm-6" id="about-me-description">
                 <h1>Cody Johnson</h1>
-                <p>I am a freshly budding full-stack developer that has always had a passion for interactive technology
-                    since I was 4 years old. I began with videogames, having a passion for them, and eventually got into
+                <p>I am a freshly budding full-stack developer that has always had a love for interactive
+                    technology
+                    since I was 4 years old. I began with videogames, having deep appreciation for them, and eventually
+                    got into
                     computers when I was early on in school. This love of computers, gaming and UX helped me see that my
                     true calling was game development, but my lack of attention in school led me to believe that I
                     missed my
