--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
                 <h1>Cody Johnson</h1>
                 <p>I am a freshly budding full-stack developer that has always had a love for interactive
                     technology
-                    since I was 4 years old. I began with videogames, having deep appreciation for them, and eventually
+                    since I was 4 years old. I began with videogames, building a deep appreciation for them, and
+                    eventually
                     got into
                     computers when I was early on in school. This love of computers, gaming and UX helped me see that my
-                    true calling was game development, but my lack of attention in school led me to believe that I
+                    true calling was software development, but my lack of attention in school led me to believe that I
                     missed my
                     shot of that in life, so I followed my secondary passion: Baking. After high school, I got in the
                     culinary world as a pastry chef and did that for about a decade, until financial circumstances
