added resume, contact info

--- a/develop/contacts.html
+++ b/develop/contacts.html
@@ -54,8 +54,8 @@
                 <a class="btn btn-warning btn-lg" href="https://www.linkedin.com/in/cody-johnson-876554a1/"
                     role="button" target="_blank" rel="noopener noreferrer"><strong>LinkedIn</strong></a>
                 <br><br>
-                <h2><strong>Or Email:
-                        <hr> cmichael.johnson@outlook.com
+                <h2><strong>Or Email and phone:
+                        <hr> cmichael.johnson@outlook.com | (970)690-8959
                     </strong></h2>
             </section>
 
