--- a/develop/resume.html
+++ b/develop/resume.html
@@ -62,6 +62,7 @@
                     <li>RESTful APIs</li>
                     <li>MongoDB</li>
                     <li>Mongoose</li>
+                    <li>React</li>
                 </ul>
                 <h3><strong>Interpersonal skills:</strong></h3>
                 <ul>
@@ -77,7 +78,10 @@
                 <p>Certificate of Completion</p>
                 <p>Currently completing the Full Stack Web Development program. Involved in writing, developing, and
                     pushing up fully functional web applications in GitHub, Heroku, and node.js. Extensively developed
-                    both front-end and back-end environments with HTML5, CSS, </p>
+                    both front-end and back-end environments with HTML5, and CSS. </p>
+                <hr>
+                <p><a href="../assets/Resume Full Stack.pdf" download><strong>View my resume</strong></a></p>
+
 
             </section>
             <section class="col-sm-4" id="skill-icons">
