added github links, footer margins and images

--- a/develop/projects.html
+++ b/develop/projects.html
@@ -47,20 +47,26 @@
         <article class="row">
             <section class="col-sm-4">
                 <img class="img-responsive" style="width: 100%" src="../assets/Screenshot (30)2.png" alt="Beer-quiz">
-                <a class="btn btn-warning btn-lg" href="https://codymjohnson.github.io/javascript-quiz/" role="button"
+                <a class="btn btn-warning" href="https://codymjohnson.github.io/javascript-quiz/" role="button"
                     target="_blank" rel="noopener noreferrer"><strong>Beer Quiz</strong></a>
+                <a class="btn btn-warning" href="https://github.com/codymjohnson/javascript-quiz" role="button"
+                    target="_blank" rel="noopener noreferrer"><strong>Github</strong></a>
             </section>
             <section class="col-sm-4">
                 <img class="img-responsive" style="width: 100%" src="../assets/Screenshot (32)1.png"
                     alt="passwd-generator">
-                <a class="btn btn-warning btn-lg" href="https://codymjohnson.github.io/Password-Generator/"
-                    role="button" target="_blank" rel="noopener noreferrer"><strong>Password Generator</strong></a>
+                <a class="btn btn-warning" href="https://codymjohnson.github.io/Password-Generator/" role="button"
+                    target="_blank" rel="noopener noreferrer"><strong>Password Generator</strong></a>
+                <a class="btn btn-warning" href="https://github.com/codymjohnson/Password-Generator" role="button"
+                    target="_blank" rel="noopener noreferrer"><strong>Github</strong></a>
             </section>
             <section class="col-sm-4">
                 <img class="img-responsive" style="width: 100%" src="../assets/Screenshot (34)1.png"
                     alt="Daily planner">
-                <a class="btn btn-warning btn-lg" href="https://codymjohnson.github.io/Daily_Planner/" role="button"
+                <a class="btn btn-warning" href="https://codymjohnson.github.io/Daily_Planner/" role="button"
                     target="_blank" rel="noopener noreferrer"><strong>Daily Planner</strong></a>
+                <a class="btn btn-warning" href="https://github.com/codymjohnson/Daily_Planner" role="button"
+                    target="_blank" rel="noopener noreferrer"><strong>Github</strong></a>
             </section>
         </article>
 
