fixed opacity and container corners

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <article class="row">
             <section class="col-sm-4">
 
-                <img src="./assets/professional-smol.jpg" id="me" class="img-fluid" style="opacity: 1;" alt="me">
+                <img src="./assets/professional-smol.jpg" id="me" class="img-fluid" style="opacity: 1 !important;"
+                    alt="me">
             </section>
             <section class="col-sm-6" id="about-me-description">
                 <h1>Cody Johnson</h1>
