redid pdf resume

--- a/develop/resume.html
+++ b/develop/resume.html
@@ -80,7 +80,7 @@
                     pushing up fully functional web applications in GitHub, Heroku, and node.js. Extensively developed
                     both front-end and back-end environments with HTML5, and CSS. </p>
                 <hr>
-                <p><a href="../assets/Resume Full Stack.pdf" download><strong>View my resume</strong></a></p>
+                <p><a href="../assets/Resume Full Stack (7).pdf" download><strong>View my resume</strong></a></p>
 
 
             </section>
